components/envoy/envs/prod/httproute-redpanda.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-console
  namespace: redpanda
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-main
  hostnames:
    - "reduce.isis.cclrc.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /redpanda-console
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: redpanda-console
      port: 8080
      weight: 1
